# VoidFrame Kernel Build Options

# Core build options
option('exclude_extra_objects', 
       type : 'boolean', 
       value : false, 
       description : 'Exclude extra objects from the build (MASSIVE effect!)')

option('automatic_post', 
       type : 'boolean', 
       value : false, 
       description : 'Perform automatic power on self-test after kernel initialization')

# Debug options
option('debug_symbols', 
       type : 'boolean', 
       value : false, 
       description : 'Include debug symbols and enable debug mode')

option('stack_protection', 
       type : 'boolean', 
       value : true, 
       description : 'Enable stack protection features')

# QEMU options
option('qemu_memory', 
       type : 'string', 
       value : '4G', 
       description : 'Amount of memory to allocate to QEMU')

option('enable_kvm', 
       type : 'boolean', 
       value : true, 
       description : 'Enable KVM acceleration in QEMU')

# Build options
option('silent_build',
       type : 'boolean',
       value : false,
       description : 'Snooze all warnings and info messages during build (-w)')